test/regexp/elliot/check-regexp-none-compiler-error.chpl
use Regexp;
var myRegexp = compile("a+");
